name:                 log-utils
version:              0.1
synopsis:             Utils for working with logs
homepage:             https://github.com/scrive/log-utils
license:              BSD3
license-file:         LICENSE
author:               Scrive
maintainer:           Andrzej Rybczak <andrzej@scrive.com>
category:             Data
build-type:           Simple
cabal-version:        >=1.10

executable log-server
  hs-source-dirs:     src
  ghc-options:        -Wall -O2

  main-is:            Main.hs
  ghc-options:        -main-is Main

  build-depends:        base < 5
                      , aeson >= 0.7
                      , bytestring
                      , data-default
                      , exceptions >= 0.6
                      , happstack-reqhandler
                      , happstack-server
                      , happstack-static-routing
                      , hpqtypes >= 1.4
                      , invariant
                      , kontra-config
                      , lifted-base
                      , log >= 0.2
                      , text
                      , transformers-base
                      , unjson
                      , vector

  default-language:   Haskell2010

  default-extensions:
                        LambdaCase
                      , OverloadedStrings
                      , RecordWildCards
                      , ScopedTypeVariables
                      , TemplateHaskell
