name:                 log-utils
version:              0.1
synopsis:             Utils for working with logs
homepage:             https://github.com/scrive/log-utils
license:              BSD3
license-file:         LICENSE
author:               Scrive
maintainer:           Andrzej Rybczak <andrzej@scrive.com>
category:             Data
build-type:           Simple
cabal-version:        >=1.10

executable log-server
  hs-source-dirs:     inc log-server
  ghc-options:        -Wall -O2 -funbox-strict-fields -threaded

  main-is:            LogServer.hs
  ghc-options:        -main-is LogServer

  build-depends:        base < 5
                      , aeson >= 0.7
                      , bytestring
                      , data-default
                      , exceptions >= 0.6
                      , happstack-reqhandler
                      , happstack-server
                      , happstack-static-routing
                      , hpqtypes >= 1.4
                      , invariant
                      , kontra-config
                      , lifted-base
                      , log >= 0.2.1
                      , monad-control
                      , random
                      , text
                      , transformers-base
                      , unjson
                      , vector

  default-language:   Haskell2010

  default-extensions:
                        LambdaCase
                      , FlexibleContexts
                      , OverloadedStrings
                      , RecordWildCards
                      , ScopedTypeVariables

executable log-fetcher
  hs-source-dirs:     inc log-fetcher
  ghc-options:        -Wall -O2 -funbox-strict-fields -threaded

  main-is:            LogFetcher.hs
  ghc-options:        -main-is LogFetcher

  build-depends:        base < 5
                      , aeson >= 0.7
                      , bytestring
                      , data-default
                      , exceptions >= 0.6
                      , hpqtypes >= 1.4
                      , invariant
                      , lifted-base
                      , log >= 0.2.1
                      , monad-control
                      , random
                      , text
                      , transformers-base
                      , unjson

  default-language:   Haskell2010

  default-extensions:
                        LambdaCase
                      , FlexibleContexts
                      , OverloadedStrings
                      , RecordWildCards
                      , ScopedTypeVariables
